--- a/server/components/project-card/project-card.liquid
+++ b/server/components/project-card/project-card.liquid
@@ -2,7 +2,7 @@
 
 <div class="project-card {{ project.aspectRatioClass }}">
     <div class="project-image-wrapper">
-        <img src="{{ project.projectFeaturedImage }}" alt="{{ project.projectname }}" loading="lazy">
+        <img src="{{ project.projectFeaturedImage }}" alt="{{ project.projectname }}" loading="lazy" data-pop-image>
     </div>
 
     <div class="project-info">
@@ -40,6 +40,8 @@
         </div> {% endcomment %}
     </div>
 </div>
+
+{% render '../../components/pop-over/pop-over.liquid' %}
 
 {% endblock %}
 
