--- a/server/layouts/base.liquid
+++ b/server/layouts/base.liquid
@@ -15,7 +15,7 @@
   {% block scripts %}{% endblock %}
 </head>
 
-<body>
+<body data-auto-init-popovers>
   <header>
     <h1>De man met de hamer</h1>
   </header>
