--- a/server/components/theatre-slider/theatre-slider.css
+++ b/server/components/theatre-slider/theatre-slider.css
@@ -97,3 +97,22 @@
   opacity: 1;
   transform: translateY(0%) scale(1) rotate(-15deg);
 }
+
+.scroller__inner img {
+  -webkit-user-drag: none;
+  -khtml-user-drag: none;
+  -moz-user-drag: none;
+  -o-user-drag: none;
+  user-drag: none;
+  pointer-events: none; /* Optional: also prevents any mouse interactions */
+}
+
+/* Or if you still want hover effects but not dragging: */
+.scroller__inner img {
+  -webkit-user-drag: none;
+  -khtml-user-drag: none;
+  -moz-user-drag: none;
+  -o-user-drag: none;
+  user-drag: none;
+  user-select: none;
+}
