--- a/server/views/index.liquid
+++ b/server/views/index.liquid
@@ -13,7 +13,7 @@
 
 {% endblock %} {% endcomment %}
 
-{% render 'stage-lights' %}
+{% render '../../components/stage-lights/stage-light.liquid' %}
 
 {% block content %}
     <div class="frame">
